Revision history for Perl module Nagios::Plugin.

0.15  19th December 2006
  - exposed Getopt and Threshold functionality from top level Nagios::Plugin
  - exchanged Class::Struct for Class::Accessor

0.14  18th October 2006
  - Fixed version number due to CPAN upload

0.13  18th October 2006
  - Lots of extra tests and fixes from Nathan Vonnahme
  - Nagios::Plugin::Getopt, Functions and ExitResult added by Gavin Carr

0.12  15th June 2006
  - rrdlabel method available to get a performance label, 
	converted to something rrd can use
  - fixes to parse_perfstring routine if values are 0
  - is_set method for range object to see if warning/critical range is set

0.11  14th June 2006
  - Interface changed for parse_perfstring, returning empty 
	array if not parseable
  - Fixed problem when parsing nagiosgraph data (linefeed at end 
	of perfdata)

0.10  8th June 2006
	First release to CPAN

0.01  Fri Jun  2 14:10:58 2006
	- original version; created by h2xs 1.23 with options
		-X -n Nagios::Plugin
